fix map on safari
`height: 100%` didn't work on children with `flex-basis: auto` in safari

also:
* remove width: 100% that caused the page to be slightly too wide (because of margins)
* hide route ladders scroll bar if the page is narrow (overflow-x: auto)

--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -1,5 +1,6 @@
 .m-ladder-page {
   box-sizing: border-box;
+  height: 100%;
   position: relative;
   transition: $transition-slide;
 
