--- a/assets/css/_page.scss
+++ b/assets/css/_page.scss
@@ -2,7 +2,6 @@
   height: 100%;
   margin-left: $tab-bar-width;
   overflow: scroll;
-  width: 100%;
 }
 
 .c-page__container {
