--- a/assets/css/_shuttle_map.scss
+++ b/assets/css/_shuttle_map.scss
@@ -2,7 +2,6 @@
   height: 100%;
   position: relative;
   transition: $transition-slide;
-  width: 100%;
 
   .m-picker-container {
     z-index: 620;
