--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -60,12 +60,11 @@ body {
 
 .m-app__banner {
   width: 100%;
-  flex: 0 0 auto;
+  flex: 0 0 0;
 }
 
 .m-app__main {
-  display: flex;
   position: relative;
-  flex: 1 1 auto;
+  flex: 1 1 0;
   min-height: 0;
 }
